--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   youtube_explode_dart: ^1.12.4
+  file_picker: ^5.3.2
 
 dev_dependencies:
   flutter_test:
