--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   youtube_explode_dart: ^1.12.4
   file_picker: ^5.3.2
+  id3_codec: ^1.0.3
 
 dev_dependencies:
   flutter_test:
