--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   youtube_explode_dart: ^1.12.4
   file_picker: ^5.3.2
   id3_codec: ^1.0.3
+  shared_preferences: ^2.1.2
 
 dev_dependencies:
   flutter_test:
